# nautilusnet

./: .gitignore  build_opencv_cuda.txt  detect.py  tasks.py
cap3d/: Makefile  TestGL.cpp  camera.cpp  camera.h  cap3d.cpp  cap3d1.cpp  common_cap3d.h  fragment.shader  fragment1.shader  fragment1_.shader  fragment__.shader  glrenderer.cpp  glrenderer.h  image_processor.cpp  image_processor.h  lexer_parser.cpp  lexer_parser.h  model3d.cpp  model3d.h  nautilus.cfg  plyfile.cpp  plyfile.h  plyfile.hpp  reader.cpp  reader.h  rot3d.cpp  rot_3d.cpp  rot_quat.cpp  sample.cpp  shader.cpp  shader.h  test.cpp  utils.cpp  utils.h  vbo.cpp  vbo.h  vertex.shader  vertex1.shader  view3d.cpp  viewer.cpp  (+1 more)
cpp/: CMakeLists.txt  Makefile  build.bat  build.sh  fmat.hpp  graph.cpp  mainapp.cpp  makefile  myyolo.cpp  nautilusnet.cpp  nautilusnet.h  net.cpp  net.h  resizeimg.cpp  rpn.cpp  sample_compile  ssearch.cpp  test.cpp  testdata.txt  testm.cpp  testrot.cpp  vec.hpp
data/: textdata.txt
java/: compile.cmd
mynet/: Makefile  commands.txt  data_prep.py  detect.py  fpn.py  myyolo.cpp  train.py
mynet/rcnn/torch/: CMakeLists.txt  anchor.hpp  backbone.hpp  build.cmd  fpn.hpp  losses.hpp  rcnn.cpp  roi_extractor.hpp  rpn.hpp  test_fpn.cpp
rcnn/: data_utils.py  frcnn.py  rpd.py
rotationnet/: classify_npyfile_case1.py  classify_npyfile_case1_all_views.py  classify_npyfile_case1_all_views_2.py  classify_npyfile_case2.py  demo.sh  deploy_modelnet40_case1.prototxt  deploy_modelnet40_case2.prototxt  deploy_nautilus_3.prototxt  deploy_nautilusnet.prototxt  deploy_resnet32_case1.prototxt  (+12 more)
(+203 files in other folders)
